# sparks

./: .gitignore
core/: CMakeLists.txt  application.cpp  application.hpp  blocking_counter.hpp  blocking_queue.hpp  blocking_queue_fwd.hpp  bounded_queue.hpp  compiler.hpp  enum_to_string.hpp  executor.cpp  executor.hpp  hashes.hpp  id_vector.hpp  id_vector_fwd.hpp  special_threads.hpp  stable_id_vector.hpp  stable_id_vector_fwd.hpp  test.cpp  window.cpp  window.hpp
proto/: .ycm_extra_conf.py  CMakeLists.txt  arraydelegate.hpp  id_vector.hpp  id_vector_test.cpp  sandbox.cpp  scheduler.cpp  scheduler.hpp  signal.hpp  sparks.cpp  unique_pulse.cpp  unique_pulse.hpp  unitests_main.cpp  work_pool.hpp  work_pool_test.cpp  work_stealing_queue.hpp  work_stealing_queue_test.cpp
